fix: use more compatible property for nowrap

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -2,5 +2,5 @@
   --sl-font: "Atkinson Hyperlegible", sans-serif;
 }
 code {
-  text-wrap-mode: nowrap;
+  white-space: nowrap;
 }
